feat: download manager ui

--- a/app/src/main/resources/astra_zh_CN.properties
+++ b/app/src/main/resources/astra_zh_CN.properties
@@ -14,6 +14,7 @@ gui.page.welcome.title=欢迎使用Astra启动器
 gui.plugins.download-manager.description=在Astra中添加一个UI来让你查看下载进度 (禁用这个插件不会影响下载功能)
 gui.plugins.download-manager.name=下载管理器
 gui.plugins.download-manager.pages.dm=下载管理器
+gui.plugins.download-manager.pages.dm.list=下载任务清单
 gui.plugins.theme.description=Astra启动器的Flatlaf主题
 gui.plugins.theme.name=Flatlaf主题
 gui.plugins.theme.settings.theme=主题:
