--- a/app/src/main/resources/astra_zh_HK.properties
+++ b/app/src/main/resources/astra_zh_HK.properties
@@ -14,6 +14,7 @@ gui.page.welcome.title=歡迎使用Astra啟動器
 gui.plugins.download-manager.description=在 Astra 中添加一個 UI，讓你查看下載進度。（禁用此插件不會影響下載功能。）
 gui.plugins.download-manager.name=下載管理器
 gui.plugins.download-manager.pages.dm=下載管理器
+gui.plugins.download-manager.pages.dm.list=下載任務清單
 gui.plugins.theme.description=Astra啟動器的Flatlaf主題
 gui.plugins.theme.name=Flatlaf主題
 gui.plugins.theme.settings.theme=主題:
